:art: Allow WebSocket over HTTP CONNECT